# solar-velocity

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  environment.yml  pyproject.toml  setup.cfg  setup.py  showyourwork.yml
data/: J1745-283  J1748-291
notebooks/: Basis functions.ipynb  Combine-Reid-GRAVITY-SgrA.ipynb  Fit-SgrAstar-PM.ipynb  Fit-SgrAstar-PM.py  Generate-sech2-basis-functions.ipynb  Midplane.ipynb  Orthogonal-basis.nb  SgrAstar.ipynb  Simulated-midplane-with-selection-asymmetries.ipynb  Simulated-midplane-with-selection.ipynb  Solar-velocity.ipynb  coord_helpers.py  model_helpers.py  simulate_helpers.py
notebooks/prototyping/: Basis-functions.ipynb  Log-simpson-integrate.ipynb  Toy-selection-function-problem.ipynb
notebooks/toy-demos/: Simulated-midplane.ipynb  Toy-selection-function-problem-density.ipynb
slurm/: make.sh
solaroid/: __init__.py  coord_helpers.py  coordinates.py  density.py  gram_schmidt.py  integrate.py  likelihood.py  model_helpers.py  simulate.py  stats.py
src/: solar-velocity2022.bib  solar-velocity2022.tex
src/data/: Combine-Reid-GRAVITY-SgrA.py  Fit-SgrAstar-PM.py  Generate-sech2-basis-functions.py
src/figures/: SgrAstar-PM.py
src/scripts/: Combine-Reid-GRAVITY-SgrA.py  Fit-SgrAstar-PM.py  Generate-sech2-basis-functions.py  SgrAstar-PM.py  matplotlibrc
src/static/: README.md  fiducial-density.yml
src/tex/: solar-velocity2022.tex
tex/: .gitignore  Makefile  preamble.tex  solar-velocity2022.tex
