[metadata]
name = solaroid
author = adrn
author_email = adriampw@gmail.com
description = Measuring the solar position and velocity at this instant
version = attr: solaroid.__version__
url = https://github.com/adrn/solaroid
keywords =
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license_files =
  LICENSE

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  astropy
  matplotlib
  numpy
  scipy

setup_requires =
  setuptools_scm
  wheel

[options.extras_require]
tests =
  pytest
