[metadata]
name = solaroid
author = adrn
author_email = adriampw@gmail.com
description = Measuring the solar position and velocity at this instant
version = attr: solaroid.__version__
url = https://github.com/adrn/solaroid
keywords =
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license_files =
  LICENSE

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  astropy
  matplotlib
  numpy
  scipy

setup_requires =
  setuptools_scm
  wheel

[options.extras_require]
tests =
  pytest

[flake8]
max-line-length = 80
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
    helpers.py: F841
ignore =
    E203
    E226
    E402
    E741
    W503
    W504